--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "@google-cloud/storage": "^6.9.0",
     "dotenv": "^17.2.3",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.0",
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
