--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^17.2.3",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0",
+    "nanoid": "^3.3.11",
     "openai": "^6.17.0",
     "resend": "^6.4.2"
   },
