--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,5 +11,11 @@
   ],
   "include": [
     "src/**/*.d.ts"
+  ],
+   "exclude": [
+    "node_modules",
+    "**/*.log",
+    "firebase-debug.log"
   ]
+  
 }
